--- a/index.html
+++ b/index.html
@@ -4,10 +4,96 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>cv</title>
+    <link rel="icon" href="assets/img/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-    <img src="img/photo.jpeg" alt="photo">
+    <header class="header">
+        <div class="container">
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#profile" class="nav-link">Profile</a></li>
+                    <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                    <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+                    <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+                    <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
+                    <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+                    <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                    <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
+                </ul>
+              </nav>
+        </div>
+    </header>
+    <main class="main">
+        <div class="container">
+            <div class="wrapper">
+                <div class="block-left">
+                    <section class="section" id="profile">
+                        <img src="assets/img/photo.jpeg" alt="photo">
+                        <h1 class="title">Viktoria Puzyrevich</h1>
+                        <h2 class="section-title">Web Developer</h2>
+                    </section>
+                    <section class="section" id="summary">
+                        <h2 class="section-title">Summary</h2>
+                        <p class="text">
+                            I want to become a front-end developer because I like to create something new and see the result of my work on the screen. I enjoy the development process and want to further develop in this direction.
+                        </p>
+                    </section>
+                    <section class="section" id="contacts">
+                        <h2 class="section-title">Contacts</h2>
+                        <ul class="contacts-list">
+                            <li class="contacts-item">Phone: +375 33 605-15-21</li>
+                            <li class="contacts-item">Discord: Viktoria Puzyrevich(@vpuzyrevich)</li>
+                            <li class="contacts-item">Email: v.puzyrevich@gmail.com</li>
+                            <li class="contacts-item">GitHub: vpuzyrevich</li>
+                            <li class="contacts-item">Location: Minsk, Belarus</li>
+                        </ul>
+                    </section>
+                </div>
+                <div class="block-right">
+                    <div class="container">
+                        <section class="section" id="education">
+                            <h2 class="section-title">Education</h2>
+                            <div class="education-text">University: Belarusian National Technical University, Estimation on automobile transport</div>
+                        </section>
+                        <section class="section" id="courses">
+                            <h2 class="section-title">Courses</h2>
+                            <ul class="courses-list">
+                                <li class="courses-item"><span>Udemy:</span> Web developer(HTML/CSS)</li>
+                                <li class="courses-item"><span>Udemy:</span>  JavaScript ang React (in progress)</li>
+                                <li class="courses-item"><span>RS Schools Course</span> JavaScript/Front-end. Stage 0 (in progress)</li>
+                            </ul>
+                        </section>
+                        <section class="section" id="skills">
+                            <h2 class="section-title">Skills</h2>
+                            <ul class="skills-list">
+                                <li class="skills-item">HTML5</li>
+                                <li class="skills-item">CSS3</li>
+                                <li class="skills-item">SASS/SCSS</li>
+                                <li class="skills-item">Bootstrap</li>
+                                <li class="skills-item">BEM</li>
+                                <li class="skills-item">Git</li>
+                                <li class="skills-item">Figma, Adobe Photoshop</li>
+                                <li class="skills-item">JavaScript (Basics)</li>
+                                <li class="skills-item">Gulp</li>
+                            </ul>
+                        </section>
+                        <section class="section" id="projects">
+                            <h2 class="section-title">Projects</h2>
+                        </section>
+                        <section class="section" id="code"></section>
+                        <section class="section" id="languages"></section>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer class="footer"></footer>
 </body>
 </html>
