feat: add styles for titles and contacts section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="assets/img/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:wght@300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     
 </head>
@@ -35,9 +35,9 @@
             <div class="wrapper">
                 <div class="block-left">
                     <section class="section" id="profile">
-                        <img src="assets/img/photo.jpeg" alt="photo">
-                        <h1 class="title">Viktoria Puzyrevich</h1>
-                        <h2 class="section-title">Web Developer</h2>
+                        <img src="assets/img/photo.jpeg" alt="photo" class="foto">
+                        <h1 class="title">Viktoria <br/> Puzyrevich</h1>
+                        <h2 class="profile-title">Web Developer</h2>
                     </section>
                     <section class="section" id="summary">
                         <h2 class="section-title">Summary</h2>
@@ -48,11 +48,11 @@
                     <section class="section" id="contacts">
                         <h2 class="section-title">Contacts</h2>
                         <ul class="contacts-list">
-                            <li class="contacts-item">Phone: +375 33 605-15-21</li>
-                            <li class="contacts-item">Discord: Viktoria Puzyrevich(@vpuzyrevich)</li>
-                            <li class="contacts-item">Email: v.puzyrevich@gmail.com</li>
-                            <li class="contacts-item">GitHub: vpuzyrevich</li>
-                            <li class="contacts-item">Location: Minsk, Belarus</li>
+                            <li class="contacts-item">Phone: <a href="tel:+375336051521"> +375 33 605-15-21</a></li>
+                            <li class="contacts-item">Discord: <a href="https://discord.gg/fBzhK6pNpM" title="discord">Viktoria Puzyrevich#5741</a></li>
+                            <li class="contacts-item">Email: <a href="mailto:v.puzyrevich@gmail.com" title="email">v.puzyrevich@gmail.com</a></li>
+                            <li class="contacts-item">GitHub: <a href="https://github.com/vpuzyrevich" title="github">vpuzyrevich</a></li>
+                            <li class="contacts-item"> Minsk, Belarus</li>
                         </ul>
                     </section>
                 </div>
@@ -60,7 +60,7 @@
                     <div class="container">
                         <section class="section" id="education">
                             <h2 class="section-title">Education</h2>
-                            <div class="education-text">University: Belarusian National Technical University, Estimation on automobile transport</div>
+                            <div class="education-text"><span>University:</span> Belarusian National Technical University, <br/> Estimation on automobile transport</div>
                         </section>
                         <section class="section" id="courses">
                             <h2 class="section-title">Courses</h2>
@@ -86,9 +86,44 @@
                         </section>
                         <section class="section" id="projects">
                             <h2 class="section-title">Projects</h2>
+                            <ul class="projects-list">
+                                <li class="projects-item">
+                                    <a href="https://vpuzyrevich.github.io/" class="projects-link">
+                                        <img src="assets/img/uber.png" alt="uber" class="projects-img">
+                                        <div class="project-name">Uber</div>
+                                    </a>
+                                </li>
+                                <li class="projects-item">
+                                    <a href="https://github.com/vpuzyrevich/raptoreum" class="projects-link">
+                                        <img src="assets/img/raptoreum.png" alt="raptoreum" class="projects-img">
+                                        <div class="project-name">Raptoreum</div>
+                                    </a>
+                                </li>
+                                <li class="projects-item">
+                                    <a href="https://github.com/vpuzyrevich/pulse" class="projects-link">
+                                        <img src="assets/img/pulse.png" alt="Pulse" class="projects-img">
+                                        <div class="project-name">Pulse</div>
+                                    </a>
+                                </li>
+                            </ul>
                         </section>
-                        <section class="section" id="code"></section>
-                        <section class="section" id="languages"></section>
+                        <section class="section" id="code">
+                            <h2 class="section-title">Code</h2>
+                            <pre>
+                                <code>
+                                    function multiply(a, b){
+                                        return (a * b)
+                                    }
+                                </code>
+                            </pre>
+                        </section>
+                        <section class="section" id="languages">
+                            <h2 class="section-title">Languages</h2>
+                            <ul class="languages-list">
+                                <li class="languages-item">Russian - native speaker</li>
+                                <li class="languages-item">English - A2 (in progress)</li>
+                            </ul>
+                        </section>
                     </div>
                 </div>
             </div>
