feat: add styles for main section

--- a/index.html
+++ b/index.html
@@ -86,42 +86,36 @@
                         </section>
                         <section class="section" id="projects">
                             <h2 class="section-title">Projects</h2>
-                            <ul class="projects-list">
-                                <li class="projects-item">
+                            <div class="projects-block">
+                                <div class="projects-item">
                                     <a href="https://vpuzyrevich.github.io/" class="projects-link">
                                         <img src="assets/img/uber.png" alt="uber" class="projects-img">
                                         <div class="project-name">Uber</div>
                                     </a>
-                                </li>
-                                <li class="projects-item">
+                                </div>
+                                <div class="projects-item">
                                     <a href="https://github.com/vpuzyrevich/raptoreum" class="projects-link">
                                         <img src="assets/img/raptoreum.png" alt="raptoreum" class="projects-img">
                                         <div class="project-name">Raptoreum</div>
                                     </a>
-                                </li>
-                                <li class="projects-item">
+                                </div>
+                                <div class="projects-item">
                                     <a href="https://github.com/vpuzyrevich/pulse" class="projects-link">
                                         <img src="assets/img/pulse.png" alt="Pulse" class="projects-img">
                                         <div class="project-name">Pulse</div>
                                     </a>
-                                </li>
-                            </ul>
+                                </div>
+                            </div>
                         </section>
                         <section class="section" id="code">
                             <h2 class="section-title">Code</h2>
-                            <pre>
-                                <code>
-                                    function multiply(a, b){
-                                        return (a * b)
-                                    }
-                                </code>
-                            </pre>
+                            <pre><code>function multiply(a, b){<br/>   return (a * b)<br/>}</code></pre>
                         </section>
                         <section class="section" id="languages">
                             <h2 class="section-title">Languages</h2>
                             <ul class="languages-list">
-                                <li class="languages-item">Russian - native speaker</li>
-                                <li class="languages-item">English - A2 (in progress)</li>
+                                <li class="languages-item"><span>Russian</span> - native speaker</li>
+                                <li class="languages-item"> <span>English</span> - A2 (in progress)</li>
                             </ul>
                         </section>
                     </div>
