--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@
             </div>
         </div>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <a href="https://github.com/vpuzyrevich">GitHub</a>
+        <div>&copy;2021</div>
+        <a href="https://rs.school/js/">
+            <img src="assets/img/rs_school.svg" alt="RSSchool">
+        </a>
+    </footer>
 </body>
 </html>
