feat: add new projects

--- a/index.html
+++ b/index.html
@@ -95,21 +95,21 @@
                     <h2 class="section-title">Projects</h2>
                     <div class="projects-block">
                         <div class="projects-item">
+                            <a href=" https://rolling-scopes-school.github.io/vpuzyrevich-JSFEPRESCHOOL/portfolio/ " class="projects-link">
+                                <img src="assets/img/portfolio.png" alt="Portfolio" class="projects-img">
+                                <div class="project-name">Photographer's portfolio</div>
+                            </a>
+                        </div>
+                        <div class="projects-item">
+                            <a href="https://rolling-scopes-school.github.io/vpuzyrevich-JSFEPRESCHOOL/image-galery/" class="projects-link">
+                                <img src="assets/img/api.png" alt="Unsplash API" class="projects-img">
+                                <div class="project-name">Unsplash API</div>
+                            </a>
+                        </div>
+                        <div class="projects-item">
                             <a href="https://vpuzyrevich.github.io/" class="projects-link">
                                 <img src="assets/img/uber.png" alt="uber" class="projects-img">
                                 <div class="project-name">Uber</div>
-                            </a>
-                        </div>
-                        <div class="projects-item">
-                            <a href="https://github.com/vpuzyrevich/raptoreum" class="projects-link">
-                                <img src="assets/img/raptoreum.png" alt="raptoreum" class="projects-img">
-                                <div class="project-name">Raptoreum</div>
-                            </a>
-                        </div>
-                        <div class="projects-item">
-                            <a href="https://github.com/vpuzyrevich/pulse" class="projects-link">
-                                <img src="assets/img/pulse.png" alt="Pulse" class="projects-img">
-                                <div class="project-name">Pulse</div>
                             </a>
                         </div>
                     </div>
