add project memory

--- a/index.html
+++ b/index.html
@@ -95,19 +95,25 @@
                     <h2 class="section-title">Projects</h2>
                     <div class="projects-block">
                         <div class="projects-item">
-                            <a href=" https://rolling-scopes-school.github.io/vpuzyrevich-JSFEPRESCHOOL/portfolio/ " class="projects-link">
+                            <a href="https://memorygame-animals.netlify.app/" class="projects-link" target="_blank">
+                                <img src="assets/img/memory.png" alt="Memory game" class="projects-img">
+                                <div class="project-name">Memory Game</div>
+                            </a>
+                        </div>
+                        <div class="projects-item">
+                            <a href="https://portfolio-for-photographer.netlify.app" class="projects-link" target="_blank">
                                 <img src="assets/img/portfolio.png" alt="Portfolio" class="projects-img">
                                 <div class="project-name">Photographer's portfolio</div>
                             </a>
                         </div>
                         <div class="projects-item">
-                            <a href="https://rolling-scopes-school.github.io/vpuzyrevich-JSFEPRESCHOOL/image-galery/" class="projects-link">
+                            <a href="https://image-galery.netlify.app" class="projects-link" target="_blank">
                                 <img src="assets/img/api.png" alt="Unsplash API" class="projects-img">
                                 <div class="project-name">Unsplash API</div>
                             </a>
                         </div>
                         <div class="projects-item">
-                            <a href="https://vpuzyrevich.github.io/" class="projects-link">
+                            <a href="https://vpuzyrevich.github.io/" class="projects-link" target="_blank">
                                 <img src="assets/img/uber.png" alt="uber" class="projects-img">
                                 <div class="project-name">Uber</div>
                             </a>
