fix: fix non-breaking space

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="block-left">
                 <section class="section" id="profile">
                     <img src="assets/img/photo.jpeg" alt="photo" class="foto">
-                    <h1 class="title">Viktoria <br /> Puzyrevich</h1>
+                    <h1 class="title">Viktoria &nbsp; Puzyrevich</h1>
                     <h2 class="profile-title">Web Developer</h2>
                 </section>
                 <section class="section" id="summary">
@@ -122,7 +122,7 @@
                 </section>
                 <section class="section" id="code">
                     <h2 class="section-title">Code</h2>
-                    <pre><code>function multiply(a, b){<br/>   return (a * b)<br/>}</code></pre>
+                    <pre><code>function multiply(a, b){&nbsp; return (a * b)&nbsp;}</code></pre>
                 </section>
                 <section class="section" id="languages">
                     <h2 class="section-title">Languages</h2>
