fix: fix non-breaking space and hyphen

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="block-left">
                 <section class="section" id="profile">
                     <img src="assets/img/photo.jpeg" alt="photo" class="foto">
-                    <h1 class="title">Viktoria &nbsp; Puzyrevich</h1>
+                    <h1 class="title">Viktoria <br> Puzyrevich</h1>
                     <h2 class="profile-title">Web Developer</h2>
                 </section>
                 <section class="section" id="summary">
@@ -51,7 +51,7 @@
                 <section class="section" id="contacts">
                     <h2 class="section-title">Contacts</h2>
                     <ul class="contacts-list">
-                        <li class="contacts-item">Phone: <a href="tel:+375336051521"> +375 33 605-15-21</a></li>
+                        <li class="contacts-item">Phone: <a href="tel:+375336051521"> +375&nbsp;33&nbsp;605&#8209;15&#8209;21</a></li>
                         <li class="contacts-item">Discord: <a href="https://discord.gg/fBzhK6pNpM"
                                 title="discord">Viktoria Puzyrevich#5741</a></li>
                         <li class="contacts-item">Email: <a href="mailto:v.puzyrevich@gmail.com"
@@ -66,7 +66,7 @@
                 <section class="section" id="education">
                     <h2 class="section-title">Education</h2>
                     <div class="education-text"><span>University:</span> Belarusian National Technical University,
-                        <br /> Estimation on automobile transport</div>
+                        <br>&nbsp;Estimation on automobile transport</div>
                 </section>
                 <section class="section" id="courses">
                     <h2 class="section-title">Courses</h2>
@@ -122,7 +122,7 @@
                 </section>
                 <section class="section" id="code">
                     <h2 class="section-title">Code</h2>
-                    <pre><code>function multiply(a, b){&nbsp; return (a * b)&nbsp;}</code></pre>
+                    <pre><code>function multiply(a, b){<br> return (a * b)<br>}</code></pre>
                 </section>
                 <section class="section" id="languages">
                     <h2 class="section-title">Languages</h2>
